fix signup on mobile

--- a/_sass/_includes/_signup.scss
+++ b/_sass/_includes/_signup.scss
@@ -29,6 +29,8 @@
 	border-bottom: solid;
 	padding-bottom: 4px;
 	border-color: $accent-color;
+	line-height: 150%;
+
 }
 
 
